--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,28 @@ supabase/.temp/
 .env
 .env.local
 
-# OS
+# Frontend build outputs
+node_modules
+dist
+dist-ssr
+*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.vercel
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
