--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 VITE_SUPABASE_URL=https://your-project.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
-VITE_CONSENT_KEYS_AUTHORIZE_URL=https://pseudoidc.consentkeys.com:3000/authorize
+VITE_CONSENT_KEYS_AUTHORIZE_URL=https://api.pseudoidc.consentkeys.com/auth
 VITE_CONSENT_KEYS_CLIENT_ID=ck_your_client_id
-VITE_CONSENT_KEYS_REDIRECT_URI=https://vyhqdltorrpswqgnltoe.supabase.co/functions/v1/consentkeys-callback
+VITE_CONSENT_KEYS_REDIRECT_URI=https://your-project.supabase.co/functions/v1/consentkeys-callback
 
