refactor: rename VITE_SUPABASE_ANON_KEY and cleanup repo structure
- Rename VITE_SUPABASE_ANON_KEY to VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY across all files
- Update frontend-init.sh to detect existing frontend code and skip redundant setup
- Update package.json and index.html with more appropriate naming
- Clarify README.md that repo already contains complete frontend code
- Update documentation to reflect actual repo structure

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
   "installCommand": "yarn install",
   "framework": "vite",
   "dev": {
-    "port": 5173,
-    "timeout": 60000
+    "port": 5173
   }
 }
 
